# Pencil-Drawing

./: CMakeLists.txt  README.md
matlab_code/: GenStroke.m  PencilDrawing.m  demo.m
pencil_drawing/: CMakeLists.txt  get_stroke.cpp  get_stroke.h  pencil_drawing.cpp  pencil_drawing.h
tests/: CMakeLists.txt  demo.cpp  test.cpp
